[workspace]
resolver = "2"
members = ["api", "program", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://solanaspeedway.com"
description = "Solana Speedway - Sprint gaming and Garage yield protocol."
documentation = "https://docs.rs/speedway-api/latest/speedway_api/"
repository = "https://github.com/solanaspeedway/speedway"
readme = "./README.md"
keywords = ["solana", "speedway", "fuel"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.21"
bincode = "1.3.3"
bytemuck = "1.14.3"
bytemuck_derive = "1.5.0"
entropy-api = "=0.1.0"
entropy-types = "=0.0.1"
num_enum = "0.7.2"
speedway-api = { path = "./api" }
ore-mint-api = "=0.1.0"
solana-security-txt = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Solana 1.18.x era - pre edition2024
solana-account-decoder = "=1.18.26"
solana-nostd-keccak = "0.1.3"
solana-program = "=1.18.26"
solana-client = "=1.18.26"
solana-sdk = "=1.18.26"
spl-pod = "=0.2.5"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = "=3.0.4"
spl-token-metadata-interface = "=0.3.5"
spl-associated-token-account = { version = "=3.0.4", features = [ "no-entrypoint" ] } 
steel = { features = ["spl"], version = "=2.0.0" }
thiserror = "1.0.57"
tokio = { version = "1.37.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
overflow-checks = true
